--- a/templates/default/customer/customercalllist.html
+++ b/templates/default/customer/customercalllist.html
@@ -118,12 +118,12 @@
 						{date_period_preset from="[name=\"datefrom\"]" to="[name=\"dateto\"]" time=true}
 						<label>
 							{trans("From")}
-							<input type="text" name="datefrom" value="{$datefrom|date_format:"%Y/%m/%d %H:%M:%S"}"
+							<input type="text" name="datefrom" value="{$datefrom|date_format:"%Y/%m/%d %H:%M"}"
 								form="filter" class="filter-item lms-ui-datetime">
 						</label>
 						<label>
 							{trans("To")}
-							<input type="text" name="dateto" value="{$dateto|date_format:"%Y/%m/%d %H:%M:%S"}"
+							<input type="text" name="dateto" value="{$dateto|date_format:"%Y/%m/%d %H:%M"}"
 								form="filter" class="filter-item lms-ui-datetime">
 						</label>
 						{icon name="clear" id="clear-filter"}
