--- a/templates/default/customer/customercallbox.html
+++ b/templates/default/customer/customercallbox.html
@@ -128,7 +128,7 @@
 
                     <div class="lms-ui-tab-table-column buttons">
                         <audio src="?m=customercall&id={$call.id}" controls controlsList="nodownload"
-                               preload="none">
+                               preload="metadata">
                             {trans("Your browser does not support the audio element.")}
                         </audio>
                         {if ConfigHelper::checkPrivilege('customer_call_management')}
