Revert "improvement: it's better to preload audio metadata (#2068)"
This reverts commit 4a86bcde7308bd8f974dc111bff3193953ba6cdf.

--- a/templates/default/customer/customercallbox.html
+++ b/templates/default/customer/customercallbox.html
@@ -128,7 +128,7 @@
 
                     <div class="lms-ui-tab-table-column buttons">
                         <audio src="?m=customercall&id={$call.id}" controls controlsList="nodownload"
-                               preload="metadata">
+                               preload="none">
                             {trans("Your browser does not support the audio element.")}
                         </audio>
                         {if ConfigHelper::checkPrivilege('customer_call_management')}
