--- a/templates/default/customer/customercalllist.html
+++ b/templates/default/customer/customercalllist.html
@@ -247,7 +247,7 @@
 								</td>
 								<td class="buttons nobr">
 									<audio src="?m=customercall&id={$call.id}" controls controlsList="nodownload"
-										   preload="metadata">
+										   preload="none">
 										{trans("Your browser does not support the audio element.")}
 									</audio>
 									{if ConfigHelper::checkPrivilege('customer_call_management')}
