--- a/css/style.less
+++ b/css/style.less
@@ -2545,6 +2545,7 @@ fieldset {
 
 .lms-ui-category-label {
 	box-shadow: 0 0.1em 0.1em #888;
+	border: 1px solid #615847;
 	background-color: white;
 	color: black;
 	padding: 0.35em;
