bugfix: visual fix of login form and fixed less compilation

--- a/userpanel/style/bclean/style.less
+++ b/userpanel/style/bclean/style.less
@@ -21,6 +21,7 @@
  *
  *  $Id$
  */
+
 @import "../../../css/less/lms-variables";
 @import "../../../css/less/userpanel-variables";
 @import "less/userpanel-variables";
@@ -29,6 +30,12 @@
 @import "../../../css/less/datatables";
 //@import "../../../css/less/jquery-ui";
 //@import "../../../css/less/button";
+
+body {
+	height: 90vh;
+	display: flex;
+	align-items: center;
+}
 
 .lms-userpanel-alert,
 INPUT.lms-userpanel-alert,
