--- a/css/style.less
+++ b/css/style.less
@@ -2559,13 +2559,13 @@ fieldset {
 
 .lms-ui-category-label {
 	box-shadow: 0 0.1em 0.1em #888;
+	border: @form-element-border;
 	background-color: white;
 	color: black;
 	padding: 0.35em;
 	text-decoration: none;
 	border-radius: 0.45em;
 	display: inline-block;
-	font-weight: bold;
 }
 
 #lms-ui-resource-tab-selector-container {
